[#24] renamed service to app
